--- a/site/package.json
+++ b/site/package.json
@@ -6,12 +6,16 @@
     "start": "node ./server.js"
   },
   "dependencies": {
+    "coffee-script": "^1.12.7",
+    "connect": "^3.7.0",
+    "connect-compiler": "^0.1.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
+    "livereload": "^0.8.0",
     "morgan": "~1.9.1",
-    "node-sass-middleware": "^0.11.0"
+    "uglify-js": "^3.6.0"
   },
   "devDependencies": {
     "express-es6-template-engine": "^2.1.9"
